5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1585_2895.log
== TEST (2019-03-25 21:19:35) 
-- CODE:
quant = int(input('quantos jogos voce deseja: '))
valor = float(input('valor do jogo: '))
ferte = float(input('valor do frete: '))

print('quant*valor+frete')
-- OUTPUT:
quant*valor+frete
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:19:44) 
-- CODE:
quant = int(input('quantos jogos voce deseja: '))
valor = float(input('valor do jogo: '))
ferte = float(input('valor do frete: '))

print('quant*valor+frete')
-- OUTPUT:
quant*valor+frete
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:21:59) 
-- CODE:
quant = int(input('quantos jogos voce deseja: '))
valor = float(input('valor do jogo: '))
ferte = float(input('valor do frete: '))

print(quant*valor+frete)
-- EXECUTION TIME:
0.182687
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 5, in <module>
    print(quant*valor+frete)
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:23:36) 
-- CODE:
quant = int(input('quantos jogos voce deseja: '))
valor = float(input('valor do jogo: '))
frete = float(input('valor do frete: '))

print(quant*valor+frete)
-- EXECUTION TIME:
0.197059
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:02:22) 
-- CODE:
quant = int(input('quantos jogos voce deseja: '))
valor = float(input('valor do jogo: '))
frete = float(input('valor do frete: '))

print(quant*valor+frete)
-- EXECUTION TIME:
0.185654
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
